# rust_vectors

./: Cargo.toml  README.md  win_lin.md
nim/: bench.nim
q/: bench.q
src/: deltas.rs  dev.rs  find_amend.rs  find_replace.rs  main.rs  mavg.rs  med.rs  other.rs  wavg.rs
