[package]
name = "rust_vectors"
version = "0.1.0"
authors = ["inv2004 <inv2004@gmail.com>"]

[dependencies]
rand = "*"
lazy_static = "*"

#[target.'cfg(...)']
[build]
rustflags = [ "-Z", "force-overflow-checks=off" ]

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

